end of day checkin

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -10,16 +10,44 @@
 </head>
 
 <body>
-    <img src="./images/worldcity.png" id="bk-img">
     <nav id="home-nav">
         <img src="./images/airplane-svgrepo-com.svg" id="logo">
         <p id="travel-agent">Dream Travel Center</p>
-        <ul>
-            <li id="home-page">Home</li>
-            <li id="About Us">About Us</li>
-            <li id="Contact Us">Contact Us</li>
+        <ul id="menu-ul">
+            <li><a href="travel_recommendation.html" id="li-home" class="active">&nbsp;Home&nbsp;</a></li>
+            <li><a href="travel_recommendation_aboutus.html" id="li-aboutus">&nbsp;About Us&nbsp;</a></li>
+            <li><a href="travel_recommendation_contactus.html" id="li-contactus">&nbsp;Contact Us&nbsp;</a></li>
         </ul>
     </nav>
+    <main>
+        <div id="search">
+
+        </div>
+    </main>
+    <div id="sidebar-icons">
+        <img src="./images/icon1.png" class="icon1">
+        <img src="./images/icon2.png" class="icon2">
+        <img src="./images/icon3.png" class="icon3">
+        <img src="./images/icon4.png" class="icon4">
+    </div>
+    <div id="airplane-path">
+        <img src="./images/airplane.png" class="airplane">
+    </div>
+    <div id="airplane2-path">
+        <img src="./images/airplane2.png" class="airplane2">
+    </div>
+    <div id="flyingsaucer-path">
+        <img src="./images/flyingsaucer.png" class="flyingsaucer">
+    </div>
+    <div id="moon-path">
+        <img src="./images/bluemoon.png" class="moon">
+    </div>
+    <div id="mars-path">
+        <img src="./images/mars.png" class="mars">
+    </div>
+    <div id="saturn-path">
+        <img src="./images/saturn.png" class="saturn">
+    </div>
 </body>
 
 </html>
