rename to index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Baloo+2:wght@400..800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="./travel_recommendation.css">
     <script src="./travel_recommendation.js" defer></script>
     <title>Travel Recommendation</title>
@@ -19,20 +14,14 @@
         <img src="./images/airplane-svgrepo-com.svg" id="logo">
         <p id="travel-agent">Dream Travel Center</p>
         <ul id="menu-ul">
-            <li><a href="index.html" id="li-home">&nbsp;Home&nbsp;</a></li>
-            <li><a href="travel_recommendation_aboutus.html" id="li-aboutus" class="active">&nbsp;About Us&nbsp;</a>
-            </li>
+            <li><a href="index.html" id="li-home" class="active">&nbsp;Home&nbsp;</a></li>
+            <li><a href="travel_recommendation_aboutus.html" id="li-aboutus">&nbsp;About Us&nbsp;</a></li>
             <li><a href="travel_recommendation_contactus.html" id="li-contactus">&nbsp;Contact Us&nbsp;</a></li>
         </ul>
     </nav>
-    <main id="aboutus-main">
-        <div id="aboutus-title">About Us</div>
-        <div id="aboutus-dreamteam">-&nbsp&nbsp&nbspmeet our dream team</div>
-        <div id="agent-container">
-            <div id="earth-agent"></div>
-            <div id="moon-agent"></div>
-            <div id="mars-agent"></div>
-            <div id="saturn-agent"></div>
+    <main>
+        <div id="search">
+
         </div>
     </main>
     <div id="sidebar-icons">
@@ -41,8 +30,14 @@
         <img src="./images/icon3.png" class="icon3">
         <img src="./images/icon4.png" class="icon4">
     </div>
-    <div id="airplane3-path">
-        <img src="./images/airplane3.png" class="airplane3">
+    <div id="airplane-path">
+        <img src="./images/airplane.png" class="airplane">
+    </div>
+    <div id="airplane2-path">
+        <img src="./images/airplane2.png" class="airplane2">
+    </div>
+    <div id="flyingsaucer-path">
+        <img src="./images/flyingsaucer.png" class="flyingsaucer">
     </div>
     <div id="moon-path">
         <img src="./images/bluemoon.png" class="moon">
