--- a/travel_recommendation_contactus.html
+++ b/travel_recommendation_contactus.html
@@ -19,7 +19,7 @@
         <img src="./images/airplane-svgrepo-com.svg" id="logo">
         <p id="travel-agent">Dream Travel Center</p>
         <ul id="menu-ul">
-            <li><a href="travel_recommendation.html" id="li-home">&nbsp;Home&nbsp;</a></li>
+            <li><a href="index.html" id="li-home">&nbsp;Home&nbsp;</a></li>
             <li><a href="travel_recommendation_aboutus.html" id="li-aboutus">&nbsp;About Us&nbsp;</a></li>
             <li><a href="travel_recommendation_contactus.html" id="li-contactus" class="active">&nbsp;Contact
                     Us&nbsp;</a></li>
