fixed contact us page issue

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./travel_recommendation.css">
+    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./navigation.css">
     <script src="./travel_recommendation.js" defer></script>
     <title>Travel Recommendation</title>
 </head>
 
 <body>
-    <nav id="home-nav">
+    <nav id="nav">
         <img src="./images/airplane-svgrepo-com.svg" id="logo">
         <p id="travel-agent">Dream Travel Center</p>
         <ul id="menu-ul">
@@ -30,23 +31,14 @@
         <img src="./images/icon3.png" class="icon3">
         <img src="./images/icon4.png" class="icon4">
     </div>
-    <div id="airplane-path">
-        <img src="./images/airplane.png" class="airplane">
+    <div id="airplane1-path">
+        <img src="./images/airplane.png" class="airplane1">
     </div>
     <div id="airplane2-path">
         <img src="./images/airplane2.png" class="airplane2">
     </div>
     <div id="flyingsaucer-path">
         <img src="./images/flyingsaucer.png" class="flyingsaucer">
-    </div>
-    <div id="moon-path">
-        <img src="./images/bluemoon.png" class="moon">
-    </div>
-    <div id="mars-path">
-        <img src="./images/mars.png" class="mars">
-    </div>
-    <div id="saturn-path">
-        <img src="./images/saturn.png" class="saturn">
     </div>
 </body>
 
