--- a/travel_recommendation_aboutus.html
+++ b/travel_recommendation_aboutus.html
@@ -9,13 +9,14 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Baloo+2:wght@400..800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./travel_recommendation.css">
+    <link rel="stylesheet" href="./travel_recommendation_aboutus.css">
+    <link rel="stylesheet" href="./navigation.css">
     <script src="./travel_recommendation.js" defer></script>
     <title>Travel Recommendation</title>
 </head>
 
 <body>
-    <nav id="home-nav">
+    <nav id="nav">
         <img src="./images/airplane-svgrepo-com.svg" id="logo">
         <p id="travel-agent">Dream Travel Center</p>
         <ul id="menu-ul">
@@ -43,15 +44,6 @@
     </div>
     <div id="airplane3-path">
         <img src="./images/airplane3.png" class="airplane3">
-    </div>
-    <div id="moon-path">
-        <img src="./images/bluemoon.png" class="moon">
-    </div>
-    <div id="mars-path">
-        <img src="./images/mars.png" class="mars">
-    </div>
-    <div id="saturn-path">
-        <img src="./images/saturn.png" class="saturn">
     </div>
 </body>
 
