--- a/travel_recommendation_contactus.html
+++ b/travel_recommendation_contactus.html
@@ -9,13 +9,14 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Baloo+2:wght@400..800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./travel_recommendation.css">
+    <link rel="stylesheet" href="./travel_recommendation_contactus.css">
+    <link rel="stylesheet" href="./navigation.css">
     <script src="./travel_recommendation_contactus.js" defer></script>
     <title>Travel Recommendation</title>
 </head>
 
 <body>
-    <nav id="home-nav">
+    <nav id="nav">
         <img src="./images/airplane-svgrepo-com.svg" id="logo">
         <p id="travel-agent">Dream Travel Center</p>
         <ul id="menu-ul">
@@ -26,10 +27,8 @@
         </ul>
     </nav>
     <main id="contactus-main">
-        <div>
-            <p id="contactus-title">Contact Us</p>
-            <p id="contactus-helptext">Let us help your dream travel come truth!</p>
-        </div>
+        <p id="contactus-title">Contact Us</p>
+        <p id="contactus-helptext">-&nbsp&nbsp&nbspLet your dream travel come truth!</p>
         <div id="contactus-entry-form">
             <div class="required">
                 <label for="name" id="contact-name">Full Name</label>
@@ -76,16 +75,7 @@
         <img src="./images/alientface.png" class="alientface">
     </div>
     <div id="astronaut-path">
-        <img src="./images/astronaut.png" class="alientface">
-    </div>
-    <div id="moon-path">
-        <img src="./images/bluemoon.png" class="moon">
-    </div>
-    <div id="mars-path">
-        <img src="./images/mars.png" class="mars">
-    </div>
-    <div id="saturn-path">
-        <img src="./images/saturn.png" class="saturn">
+        <img src="./images/astronaut.png" class="astronaut">
     </div>
 </body>
 
