--- a/travel_recommendation_contactus.html
+++ b/travel_recommendation_contactus.html
@@ -77,6 +77,9 @@
     <div id="astronaut-path">
         <img src="./images/astronaut.png" class="astronaut">
     </div>
+    <div id="rocket-path">
+        <img src="./images/rocket.png" class="rocket">
+    </div>
 </body>
 
 </html>
