added ufo image

--- a/travel_recommendation_contactus.html
+++ b/travel_recommendation_contactus.html
@@ -71,14 +71,17 @@
         <img src="./images/icon3.png" class="icon3">
         <img src="./images/icon4.png" class="icon4">
     </div>
+    <div id="rocket-path">
+        <img src="./images/rocket.png" class="rocket">
+    </div>
+    <div id="ufo-path">
+        <img src="./images/ufo.png" class="ufo">
+    </div>
     <div id="alientface-path">
         <img src="./images/alientface.png" class="alientface">
     </div>
     <div id="astronaut-path">
         <img src="./images/astronaut.png" class="astronaut">
-    </div>
-    <div id="rocket-path">
-        <img src="./images/rocket.png" class="rocket">
     </div>
 </body>
 
