--- a/travel_recommendation_aboutus.html
+++ b/travel_recommendation_aboutus.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./travel_recommendation_aboutus.css">
     <link rel="stylesheet" href="./navigation.css">
-    <script src="./travel_recommendation.js" defer></script>
+    <script src="./travel_recommendation_aboutus.js" defer></script>
     <title>Travel Recommendation</title>
 </head>
 
@@ -30,10 +30,14 @@
         <div id="aboutus-title">About Us</div>
         <div id="aboutus-dreamteam">-&nbsp&nbsp&nbspmeet our dream team</div>
         <div id="agent-container">
-            <div id="earth-agent"></div>
-            <div id="moon-agent"></div>
-            <div id="mars-agent"></div>
-            <div id="saturn-agent"></div>
+            <img src="./images/agent1.png" id="agent1">
+            <img src="./images/agent2.png" id="agent2">
+            <img src="./images/agent3.png" id="agent3">
+            <img src="./images/agent4.png" id="agent4">
+        </div>
+        <div id="arrows">
+            <img src="./images/leftarrow.png" onclick="lefttArrowClicked()">
+            <img src="./images/rightarrow.png" onclick="rightArrowClicked()">
         </div>
     </main>
     <div id="sidebar-icons">
@@ -41,6 +45,9 @@
         <img src="./images/icon2.png" class="icon2">
         <img src="./images/icon3.png" class="icon3">
         <img src="./images/icon4.png" class="icon4">
+    </div>
+    <div id="coffin-path">
+        <img src="./images/coffin.png" class="coffin">
     </div>
     <div id="airplane3-path">
         <img src="./images/airplane3.png" class="airplane3">
