end of day checkin

--- a/aboutus.html
+++ b/aboutus.html
@@ -9,9 +9,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Baloo+2:wght@400..800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./travel_recommendation_aboutus.css">
+    <link rel="stylesheet" href="./aboutus.css">
     <link rel="stylesheet" href="./navigation.css">
-    <script src="./travel_recommendation_aboutus.js" defer></script>
+    <script src="./aboutus.js" defer></script>
     <title>Travel Recommendation</title>
 </head>
 
@@ -21,9 +21,9 @@
         <p id="travel-agent">Dream Travel Center</p>
         <ul id="menu-ul">
             <li><a href="index.html" id="li-home">&nbsp;Home&nbsp;</a></li>
-            <li><a href="travel_recommendation_aboutus.html" id="li-aboutus" class="active">&nbsp;About Us&nbsp;</a>
+            <li><a href="aboutus.html" id="li-aboutus" class="active">&nbsp;About Us&nbsp;</a>
             </li>
-            <li><a href="travel_recommendation_contactus.html" id="li-contactus">&nbsp;Contact Us&nbsp;</a></li>
+            <li><a href="contactus.html" id="li-contactus">&nbsp;Contact Us&nbsp;</a></li>
         </ul>
     </nav>
     <main id="aboutus-main">
