--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
         <img src="./images/icon3.png" class="icon3">
         <img src="./images/icon4.png" class="icon4">
     </div>
+    <div id="dreamtravelcenter">
+        <img src="./images/dreamtravelcenter.png">
+    </div>
     <div id="airplane1-path">
         <img src="./images/airplane.png" class="airplane1">
     </div>
