--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Baloo+2:wght@400..800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./navigation.css">
@@ -35,20 +35,20 @@
             <button id="bookwithus">Book with Us</button>
         </div>
         <div id="search-results">
-            <div id="result">
+            <div class="result" id="result1">
                 <img src="" id="result1-pic">
-                <p id="result-caption"></p>
-                <p id="result-description"></p>
+                <p class="result-caption" id="pic1-caption"></p>
+                <p class="result-description" id="pic1-description"></p>
             </div>
-            <div id="result">
+            <div class="result" id="result2">
                 <img src="" id="result2-pic">
-                <p id="result-caption"></p>
-                <p id="result-description"></p>
+                <p class="result-caption" id="pic2-caption"></p>
+                <p class="result-description" id="pic2-description"></p>
             </div>
-            <div id="result">
+            <div class="result" id="result3">
                 <img src="" id="result3-pic">
-                <p id="result-caption"></p>
-                <p id="result-description"></p>
+                <p class="result-caption" id="pic3-caption"></p>
+                <p class="result-description" id="pic3-description"></p>
             </div>
             <div id="arrows">
                 <img src="./images/leftarrow.png" onclick="lefttArrowClicked()">
